# autotools-quoting

./: BUILD.bazel  Makefile.am  Makefile.in  README.md  configure  configure.ac  hello-world.c  one  test.sh  two
